--- a/checkpoint1/src/main/resources/application.properties
+++ b/checkpoint1/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.application.name=checkpoint1
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:pedidosdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-server.address=0.0.0.0
-server.port=9090
